--- a/node-calculator.html
+++ b/node-calculator.html
@@ -135,7 +135,7 @@
         }
 
         .node.poi { background: #444; border-color: #666; }
-        .node.start { background: #2d7d32; border-color: #4caf50; }
+        .node.start { background: #1976d2; border-color: #2196f3; }
         .node.save { background: #f57c00; border-color: #ff9800; }
         .node.boss { background: #c62828; border-color: #f44336; }
 
@@ -163,9 +163,9 @@
         }
 
         .connection.undirected .connection-line { stroke-dasharray: none; }
-        .connection.directed .connection-line { stroke-dasharray: none; }
-        .connection.shortcut .connection-line { stroke-dasharray: 5,5; stroke: #00bcd4; }
-        .connection.mechanism .connection-line { stroke-dasharray: 2,2; stroke: #ff5722; }
+        .connection.directed .connection-line { stroke-dasharray: 5,5; }
+        .connection.shortcut .connection-line { stroke-dasharray: none; stroke: #00bcd4; }
+        .connection.mechanism .connection-line { stroke-dasharray: none; stroke: #ff5722; }
 
         /* Self-connection circles */
         .self-connection-circle {
@@ -181,9 +181,9 @@
         }
 
         .connection.undirected .self-connection-circle { stroke-dasharray: none; }
-        .connection.directed .self-connection-circle { stroke-dasharray: none; }
-        .connection.shortcut .self-connection-circle { stroke-dasharray: 5,5; stroke: #00bcd4; }
-        .connection.mechanism .self-connection-circle { stroke-dasharray: 2,2; stroke: #ff5722; }
+        .connection.directed .self-connection-circle { stroke-dasharray: 5,5; }
+        .connection.shortcut .self-connection-circle { stroke-dasharray: none; stroke: #00bcd4; }
+        .connection.mechanism .self-connection-circle { stroke-dasharray: none; stroke: #ff5722; }
 
         /* Marker path for middle markers */
         .marker-path {
